preventing duplicate non unique secondary index data + adding support to sorted in-memory secondary index